--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,37 +1,37 @@
 <% layout('layouts/boilerplate')%>
-<div id="cluster-map"></div>
-<div class="container">
-    <h1>All Campgrounds</h1>
 
-    <% for (let campground of campgrounds){%>
+<div id="cluster-map"></div>
+<div class="mt-4 mb-4">
+    <h1>All Campgrounds</h1>
+</div>
+<% for (let campground of campgrounds) {%>
     <div class="card mb-3">
         <div class="row">
             <div class="col-md-4">
-                <%if(campground.images.length) {%>
-                <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
-                <% }else {%>
-                <img class="img-fluid" alt=""
-                    src="https://res.cloudinary.com/douqbebwk/image/upload/v1600103881/YelpCamp/lz8jjv2gyynjil7lswf4.png">
+                <% if(campground.images.length){ %>
+                    <img crossorigin="anonymous" class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                <% }else{ %>
+                    <img crossorigin="anonymous" class="img-fluid" alt="" src="https://res.cloudinary.com/dvnlkm0uf/image/upload/v1718229538/YelpCamp/ufkd75eyps6eb6metpzo.jpg">
                 <% } %>
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title"><%= campground.title %> </h5>
-
-                    <p class="card-text"><%= campground.description %></p>
+                    <h5 class="card-title"><%=campground.title%></h5>
                     <p class="card-text">
-                        <small class="text-muted"><%= campground.location%></small>
+                        <%=campground.description%>
                     </p>
-                    <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title%></a>
+                    <p class="card-text">
+                        <small class="text-muted"><%=campground.location%></small>
+                    </p>
+                    <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title %></a>
                 </div>
             </div>
         </div>
     </div>
-    <% }%>
-</div>
+<% }%>
+
 <script>
     const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
-    const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+    const campgrounds = {features: <%- JSON.stringify(campgrounds)%>}
 </script>
-
 <script src="/javascripts/clusterMap.js"></script>
