--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,33 +1,45 @@
-<% layout('layouts/boilerplate')%>
-
-<div class="container d-flex justify-content-center align-items-center mt-5">
-    <div class="row">
-        <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
-            <div class="card shadow">
-                <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
-                    alt="" class="card-img-top" />
-                <div class="card-body">
-                    <h5 class="card-title">Login</h5>
-                    <form action="/login" method="POST" class="validated-form" novalidate>
-                        <div class="mb-3">
-                            <label class="form-label" for="username">Username</label>
-                            <input class="form-control" type="text" id="username" name="username" autofocus required>
-                            <div class="valid-feedback">
-                                Looks good!
+<% layout('layouts/boilerplate') %>
+    <body style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))
+    ,url('https://images.unsplash.com/photo-1533575770077-052fa2c609fc?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-position: center;
+    background-size: cover;">
+        <main class="mx-2">
+            <div class="container d-flex justify-content-center align-items-center mt-5">
+                <div class="row flex-fill">
+                    <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <img class="card-img-top" src="" alt="">
+                                <h4 class="card-title text-center mb-3">Login</h4>
+                                <form action="/login" method="POST" class="validated-form" novalidate>
+                                    <div class="mb-3">
+                                        <label for="username" class="form-label mb-3">Username</label>
+                                        <input type="text" id="username" name="username" class="form-control" required autofocus>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                        <div class="invalid-feedback">
+                                            Complete the Username!!
+                                        </div>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="password" class="form-label mb-3">Password</label>
+                                        <input type="password" id="password" name="password" class="form-control" required>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                        <div class="invalid-feedback">
+                                            Complete the Password!!
+                                        </div>
+                                    </div>
+                                    <div class="d-grid">
+                                        <button class="btn btn-success btn-block mt-3 mb-3">Login</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
-
-                        <div class="mb-3">
-                            <label class="form-label" for="password">Password</label>
-                            <input class="form-control" type="password" id="password" name="password" required>
-                            <div class="valid-feedback">
-                                Looks good!
-                            </div>
-                        </div>
-                        <button class="btn btn-success btn-block">Login</button>
-                    </form>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
+        </main>
+    </body>
