--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -45,6 +45,6 @@
                     <button class="btn btn-success">Add campground</button>
                 </div>
             </form>
-            <a href="/campgrounds">All campgrounds</a>
+            <a class="btn btn-light" href="/campgrounds">All campgrounds</a>
         </div>
     </div>
