adding finishing touches

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -44,6 +44,9 @@
                 <div class="mb-3">
                     <button class="btn btn-success">Add campground</button>
                 </div>
-            </form>
+                <div class="mb-3">
+                    <a href="/campgrounds" class="btn btn-white">All Campgrounds</a>
+                </div>
+            </form> 
         </div>
     </div>
