--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+
     <body style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5))
     ,url('https://images.unsplash.com/photo-1533575770077-052fa2c609fc?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-position: center;
@@ -14,7 +15,8 @@
                                 <form action="/login" method="POST" class="validated-form" novalidate>
                                     <div class="mb-3">
                                         <label for="username" class="form-label mb-3">Username</label>
-                                        <input type="text" id="username" name="username" class="form-control" required autofocus>
+                                        <input type="text" id="username" name="username" class="form-control" required
+                                            autofocus>
                                         <div class="valid-feedback">
                                             Looks good!
                                         </div>
@@ -24,7 +26,8 @@
                                     </div>
                                     <div class="mb-3">
                                         <label for="password" class="form-label mb-3">Password</label>
-                                        <input type="password" id="password" name="password" class="form-control" required>
+                                        <input type="password" id="password" name="password" class="form-control"
+                                            required>
                                         <div class="valid-feedback">
                                             Looks good!
                                         </div>
